<resources>
    <string name="app_name">Wizard</string>
    <string name="home_textView_title">WIZARD</string>
    <string name="home_btn_play">PLAY</string>
    <string name="home_btn_settings">SETTINGS</string>
    <string name="home_btn_howToPlay">RULES</string>
    <string name="home_imgView_logo">Wizard Logo</string>
    <string name="lobby_textView_title">Sign up</string>
    <string name="lobby_textView_serverResponse">Server Response: </string>
    <string name="lobby_btn_testServer">TEST SERVER</string>
...
