...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_green"
    tools:context=".LobbyActivity">

    <Button
        android:id="@+id/lobby_btn_ToGameScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/lobby_btn_toGameScreen"
        android:layout_below="@+id/lobby_edittext_username"
        android:layout_centerHorizontal="true" />
...
