...
        android:contentDescription="@string/tablecard6"
        android:scaleType="fitXY" />

    <!--button Nodepade -->

    <EditText
        android:id="@+id/etn_Vorhersage"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="290dp"
...
